<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/cl_resetPasswordOtpContainer">

    <TextView
            android:id="@+id/tv_resetPasswordOtpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular1"
            android:text="@string/reset_password_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/tv_resetPasswordOtpMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            android:text="@string/reset_password_otp_message"
            android:layout_marginTop="@dimen/margin_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_resetPasswordOtpTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_resetPasswordOtpNumber"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:hint="@string/reset_password_otp_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resetPasswordOtpMessage">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_resetPasswordOtpNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal"
                android:padding="@dimen/padding_medium"
                tools:text="1234" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tv_resetPasswordOtpResendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_medium"
            android:text="@string/reset_password_otp_resend"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/padding_small"
            android:background="@drawable/border_cyan"
            app:layout_constraintTop_toBottomOf="@id/til_resetPasswordOtpNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
            android:id="@+id/iv_resetPasswordOtpProceedButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/margin_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resetPasswordOtpResendButton"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/ic_check_circle_unconfirmed"
            tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>