<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/cl_resetPasswordStatusContainer">

    <TextView
            android:id="@+id/tv_resetPasswordStatusMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/reset_password_fail_status" />

    <ImageView
            android:id="@+id/iv_resetPasswordStatusImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="@dimen/margin_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resetPasswordStatusMessage"
            tools:src="@drawable/ic_cancel"
            tools:ignore="ContentDescription" />

    <TextView
            android:id="@+id/tv_resetPasswordStatusLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password_status_login"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_regular"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/iv_resetPasswordStatusImage"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/tv_resetPasswordStatusRetryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password_status_retry"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_regular"
            android:background="@drawable/border_black"
            app:layout_constraintTop_toBottomOf="@id/iv_resetPasswordStatusImage"
            app:layout_constraintEnd_toStartOf="@id/tv_resetPasswordStatusLoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>