<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/cl_resetPasswordMainContainer">

    <TextView
            android:id="@+id/tv_resetPasswordMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular1"
            android:text="@string/reset_password_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/tv_resetPasswordMainMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            android:text="@string/reset_password_main_message"
            android:layout_marginTop="@dimen/margin_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_resetPasswordMainTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_resetPasswordMainRegNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:background="@drawable/bg_text_input_layout"
            android:hint="@string/reset_password_main_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resetPasswordMainMessage">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_resetPasswordMainRegNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal"
                android:padding="@dimen/padding_medium"
                android:background="@android:color/transparent"
                tools:text="1234567890" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:id="@+id/iv_resetPasswordMainProceedButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/margin_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_resetPasswordMainRegNumber"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/ic_check_circle_unconfirmed"
            tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>