<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_regular"
        android:background="@color/white"
        android:id="@+id/cl_changePasswordRootContainer">

    <ImageView
            android:id="@+id/iv_changePasswordLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo"
            android:layout_marginTop="@dimen/space_normal"
            android:src="@drawable/logo_verifly_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="contentDescription" />

    <TextView
            android:id="@+id/tv_changePasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:padding="@dimen/padding_small"
            android:text="@string/change_password_title"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_changePasswordLogo" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_changePasswordNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:background="@drawable/bg_text_input_layout"
            android:hint="@string/change_password_new_hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_changePasswordTitle">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_changePasswordNew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal"
                android:padding="@dimen/padding_medium"
                android:background="@android:color/transparent"
                tools:text="slicepay@1234" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_changePasswordConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:background="@drawable/bg_text_input_layout"
            android:hint="@string/change_password_confirm_hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_changePasswordNew">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_changePasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal"
                android:padding="@dimen/padding_medium"
                android:background="@android:color/transparent"
                tools:text="slicepay@1234" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/button_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:paddingStart="@dimen/padding_xlarge"
            android:paddingEnd="@dimen/padding_xlarge"
            android:text="@string/change_password_button"
            android:textAllCaps="true"
            android:background="@drawable/border_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_changePasswordConfirm"
            android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>